--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hello Coursera!</title>
+	<link rel="stylesheet" href="style.css">
+	<title>龟兄，阿基和芝诺的下棋风格介绍</title>
 </head>
 <body>
-<h1>Hello Coursera!</h1>
+<h1>龟兄，阿基和芝诺的下棋风格介绍</h1>
+<div class="row">
+	<div class="col-lg-4 col-md-6 col-sm-1">
+		<p class="titlep"> 君君 </p>
+		<p class="contentp" id="junjun">君君的老路是野兽，九战士和五龙。君君是发牌员的亲戚。当第五回合没有来紫卡的时候，君君会开始问候发牌员。
+		</p>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-1">
+		<p class="titlep"> fap </p>
+		<p class="contentp" id="fap">fap则以444见长，同时擅长luna系列的玩法，一般在10回合决定打什么。
+		</p>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-1">
+		<p class="titlep"> cop </p>
+		<p class="contentp" id="cop">cop喜欢猎人和刺客，以及花里胡哨的水神刺等套路。
+		</p>
+	</div>
+</div>
 </body>
 </html>
